--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.application.name=health-care
 
 # ????????? ???? ??????
-spring.datasource.url=jdbc:postgresql://localhost:5432/health
+spring.datasource.url=jdbc:postgresql://localhost:5432/kurs
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=1337
 
 # JPA ?????????
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 
 # ???? ??????????
