feat: adding user with candidate registration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=health-care
 
 # ????????? ???? ??????
-spring.datasource.url=jdbc:postgresql://localhost:5432/kurs
+spring.datasource.url=jdbc:postgresql://localhost:5432/health
 spring.datasource.username=postgres
-spring.datasource.password=1337
+spring.datasource.password=postgres
 
 # JPA ?????????
 spring.jpa.hibernate.ddl-auto=create-drop
