fix: staff member login

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=health-care
 
 # ????????? ???? ??????
-spring.datasource.url=jdbc:postgresql://localhost:5432/health
+spring.datasource.url=jdbc:postgresql://localhost:5432/healthcare
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
